--- a/config/eighteen.conf
+++ b/config/eighteen.conf
@@ -2,3 +2,16 @@ CONFIG_ZMK_IDLE_TIMEOUT=300000
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800000
+
+#
+# Configure PS2 Mouse Settings
+#
+
+# CONFIG_ZMK_MOUSE=y
+# CONFIG_ZMK_MOUSE_TICK_DURATION=8
+CONFIG_ZMK_MOUSE_PS2_SAMPLING_RATE=60
+# CONFIG_ZMK_MOUSE_PS2_SWAP_XY=y
+CONFIG_ZMK_MOUSE_PS2_TP_INVERT_X=y
+CONFIG_ZMK_MOUSE_PS2_TP_INVERT_Y=y
+CONFIG_ZMK_MOUSE_PS2_ENABLE_CLICKING=n
+CONFIG_ZMK_MOUSE_PS2_TP_TAP_TO_SELECT=n
