--- a/config/west.yml
+++ b/config/west.yml
@@ -1,11 +1,13 @@
 manifest:
   remotes:
-    - name: urob
-      url-base: https://github.com/urob
+    - name: zmkfirmware
+      url-base: https://github.com/zmkfirmware
+    - name: infused-kim
+      url-base: https://github.com/infused-kim
   projects:
     - name: zmk
-      remote: urob
-      revision: main
+      remote: infused-kim
+      revision: pr-testing/mouse_ps2
       import: app/west.yml
   self:
     path: config
