--- a/config/eighteen.conf
+++ b/config/eighteen.conf
@@ -2,3 +2,7 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800000
+
+# Combo config
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6 
+CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=3 
