--- a/config/boards/shields/eighteen/combos.dtsi
+++ b/config/boards/shields/eighteen/combos.dtsi
@@ -11,3 +11,38 @@
 
 #define COMBO_IDLE_FAST 150
 #define COMBO_IDLE_SLOW 50
+
+/* Layers combo */
+ZMK_COMBO(sys, &to SYS, 3 4 5, AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(num, &to NUM, 0 1 2, AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(fun, &to FUN, 3 5, AL1, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(bt, &to BT, 7 9, SM1, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+
+// make homerow combos tap-only (so HRMs can be chorded instantaneously)
+#define HRC_ESC    &hml         LC(LALT) TAB
+#define HRC_BSPC    &hmr         RC(RALT) BSPC
+
+/* Horizontal combos - right hand */
+ZMK_COMBO(bspc, HRC_BSPC, 4 5, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(ret, &kp RET, 11 12, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+ZMK_COMBO(dot, &dot_morph, 10 11, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(comma, &comma_morph, 3 4, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(sqt, &kp SQT, 10 12, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+/* Horizontal combos - left hand */
+ZMK_COMBO(esc, HRC_ESC, 0 1, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(tab, &kp TAB, 7 8, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+ZMK_COMBO(minus, &kp MINUS, 1 2, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(equal, &kp EQUAL, 8 9, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+/* Vertical combos - left hand */
+ZMK_COMBO(grave, &kp GRAVE,     0 7,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(bslh,  &kp BSLH,      1 8,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(tilde, &kp TILDE,     2 9,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+
+/* Vertical combos - right hand */
+ZMK_COMBO(star,  &kp STAR,      3 10,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(fslh,  &kp FSLH,      4 11,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(pipe,  &kp PIPE,      5 12,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
