--- a/config/boards/shields/eighteen/eighteen.dtsi
+++ b/config/boards/shields/eighteen/eighteen.dtsi
@@ -12,6 +12,7 @@
 	kscan0: kscan_0 {
 		compatible = "zmk,kscan-gpio-direct";
 		label = "KSCAN";
+		wakeup-source;
 		input-gpios
 		
 		= <&pro_micro 1 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
