--- a/config/boards/shields/eighteen/combos.dtsi
+++ b/config/boards/shields/eighteen/combos.dtsi
@@ -15,8 +15,8 @@
 /* Layers combo */
 ZMK_COMBO(sys, &to SYS, 3 4 5, AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(num, &to NUM, 0 1 2, AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(bt, &to BT, 7 9, SYS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(mouse, &smart_mouse, 0 2, AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(bt, &to BT, 3 5, AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 // make homerow combos tap-only (so HRMs can be chorded instantaneously)
 #define HRC_ESC    &hml         LC(LALT) ESC
@@ -31,7 +31,7 @@ ZMK_COMBO(comma, &comma_morph, 3 4, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FA
 ZMK_COMBO(sqt, &kp SQT, 10 12, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Horizontal combos - left hand */
-ZMK_COMBO(esc, HRC_ESC, 0 1, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(esc, HRC_ESC, 7 9, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(tab, &kp TAB, 7 8, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 ZMK_COMBO(minus, &kp MINUS, 1 2, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
