--- a/config/boards/shields/eighteen/combos.dtsi
+++ b/config/boards/shields/eighteen/combos.dtsi
@@ -20,29 +20,27 @@ ZMK_COMBO(bt, &to BT, 3 5, AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 // make homerow combos tap-only (so HRMs can be chorded instantaneously)
 #define HRC_ESC    &hml         LG(LALT) ESC
-#define HRC_BSPC    &hmr         RG(RALT) BSPC
+#define HRC_PGUP    &hmr         RG(RALT) PG_UP
 
 /* Horizontal combos - right hand */
-ZMK_COMBO(bspc, HRC_BSPC, 4 5, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(ret, &kp RET, 11 12, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(pgd, &kp PG_DN, 4 3, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(pgu, HRC_PGUP, 4 5, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
-ZMK_COMBO(comma, &comma_morph, 4 3, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(dot, &dot_morph, 10 11, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(comma, &comma_morph, 10 11, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(dot, &dot_morph, 11 12, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(sqt, &kp SQT, 10 12, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Horizontal combos - left hand */
 ZMK_COMBO(esc, HRC_ESC, 0 1, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(tab, &kp TAB, 7 8, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
-ZMK_COMBO(minus, &kp MINUS, 1 2, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(equal, &kp EQUAL, 8 9, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(ret, &kp RET, 1 2, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(rpt, &key_repeat, 8 9, AL1 AL2 AL2U, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Vertical combos - left hand */
-ZMK_COMBO(grave, &kp GRAVE,     0 7,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(bslh,  &kp BSLH,      1 8,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(tilde, &kp TILDE,     2 9,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(bkey, &kp B,     0 7,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(tilde, &kp TILDE,     1 8,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Vertical combos - right hand */
-ZMK_COMBO(star,  &kp STAR,      3 10,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(fslh,  &kp FSLH,      4 11,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(pipe,  &kp PIPE,      5 12,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(grave, &kp GRAVE,     4 11,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(wkey,  &kp W,      5 12,     AL1 AL2 AL2U, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
